--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,20 +3,27 @@
         <title>Django Girls blog</title>
     </head>
     <body>
+      <style>
+        body {font-family: Courier;}
+      </style>
+
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+          <center>
+            <h1><a href="">Naina's Blog</a></h1>
+          </center>
         </div>
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <h2><a href="">Welcome</a></h2>
+            <p> Hi! Welcome to my blog. Here, you will learn about a, b, and c. It'll be fun! Woohoo. </p>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+            <p>published: 14.06.2014, 12:15</p>
+            <h2><a href="">About the Creator</a></h2>
+            <p> Welcome back! If you want to learn more about the creator of this blog, keep on reading!
+              </p>
         </div>
     </body>
 </html>
