--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,24 +4,24 @@
     </head>
     <body>
       <style>
-        body {font-family: Courier;}
+        body {font-family: Verdana;}
       </style>
 
-        <div>
+        <div style="background-color:rgb=(0,77,77);color:white;padding:20px;">
           <center>
             <h1><a href="">Naina's Blog</a></h1>
           </center>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">Welcome</a></h2>
+            <p>published: 14.06.2014, 12:14</p>
             <p> Hi! Welcome to my blog. Here, you will learn about a, b, and c. It'll be fun! Woohoo. </p>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:15</p>
             <h2><a href="">About the Creator</a></h2>
+            <p>published: 14.06.2014, 12:15</p>
             <p> Welcome back! If you want to learn more about the creator of this blog, keep on reading!
               </p>
         </div>
