experimenting with fonts/colors

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,21 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Naina's blog</title>
     </head>
-    <body>
+    <body style="padding:20px">
       <style>
-        body {font-family: Verdana;}
+        body {font-family: Garamond;}
       </style>
 
-        <div style="background-color:rgb=(0,77,77);color:white;padding:20px;">
+        <div style="background-color:rgb(0,77,77);color:white;">
           <center>
             <h1><a href="">Naina's Blog</a></h1>
           </center>
         </div>
 
         <div>
-            <h2><a href="">Welcome</a></h2>
-            <p>published: 14.06.2014, 12:14</p>
+            <h2><a href="">Welcome</a> </h2>
+            <p> published: 14.06.2014, 12:14</p>
             <p> Hi! Welcome to my blog. Here, you will learn about a, b, and c. It'll be fun! Woohoo. </p>
         </div>
 
