experimenting with fonts and colors

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,9 @@
 
         <div style="background-color:rgb(0,77,77);color:white;">
           <center>
-            <h1><a href="">Naina's Blog</a></h1>
+            <br />
+            <h1>Naina's Blog</h1>
+            <br />
           </center>
         </div>
 
