experimenting with formatting

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,14 +14,14 @@
             <br />
           </center>
         </div>
-
-        <div>
+<br />
+        <div style="width:50%">
             <h2><a href="">Welcome</a> </h2>
             <p> published: 14.06.2014, 12:14</p>
             <p> Hi! Welcome to my blog. Here, you will learn about a, b, and c. It'll be fun! Woohoo. </p>
         </div>
 
-        <div>
+        <div style="width:50%">
             <h2><a href="">About the Creator</a></h2>
             <p>published: 14.06.2014, 12:15</p>
             <p> Welcome back! If you want to learn more about the creator of this blog, keep on reading!
