--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,10 +10,19 @@
         <div style="background-color:rgb(0,77,77);color:white;">
           <center>
             <br />
-            <h1>Naina's Blog</h1>
+            <h1>Django Girl's Blog</h1>
             <br />
           </center>
         </div>
+
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+
 <br />
         <div style="width:50%">
             <h2><a href="">Welcome</a> </h2>
@@ -27,5 +36,7 @@
             <p> Welcome back! If you want to learn more about the creator of this blog, keep on reading!
               </p>
         </div>
+
+
     </body>
 </html>
