--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,24 @@
+{% load staticfiles %}
+
 <html>
     <head>
-        <title>Naina's blog</title>
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+      <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
+
+      <title>Naina's blog</title>
     </head>
     <body style="padding:20px">
-      <style>
-        body {font-family: Garamond;}
-      </style>
 
-        <div style="background-color:rgb(0,77,77);color:white;">
-          <center>
+
+        <div>
+
             <br />
-            <h1>Django Girl's Blog</h1>
+            <h1><a href="/">Django Girls Blog</a></h1>
             <br />
-          </center>
+
         </div>
 
 {% for post in posts %}
