--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,10 +2,10 @@ h1 a {
     color: #FCA205;
      font-family: 'Lobster';
 }
-h1 a {
+h2 a {
     color: #000000;
      font-family: 'Lobster';
-
+}
 
 body {
     padding-left: 15px;
