Blog post editing

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,11 +8,13 @@
       <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 
-      <title>Naina's blog</title>
+      <title> <center> Naina's blog </center> </title>
     </head>
     <body>
-    <div class="page-header">
+    <div class="page-header" >
+        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Django Girls Blog</a></h1>
+
     </div>
     <div class="content container">
         <div class="row">
