--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,12 +8,15 @@
       <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 
-      <title> <center> Naina's blog </center> </title>
+      <title> Naina's blog </title>
     </head>
     <body>
     <div class="page-header" >
+        {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <h1><a href="/">Django Girls Blog</a></h1>
+        <h1> <center> <a href="/">Django Girls Blog</a> </center> </h1>
 
     </div>
     <div class="content container">
